--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body class="not-loaded">
     <div class="night"></div>
     <div class="happy-woman-day">𝓗𝓪𝓹𝓹𝔂 𝔀𝓸𝓶𝓮𝓷'𝓼 𝓭𝓪𝔂 2️⃣0️⃣/1️⃣0️⃣</div>
+    <div class="happy-woman-day">𝓒𝓱𝓲̣ 𝓮𝓶 𝓱𝓪̣̂𝔲 𝓬𝓪̂̀𝓷 𝓶𝓪̃𝓲 𝓭𝓲̉𝓷𝓱</div>
     <div class="flowers">
       <div class="flower flower--1">
         <div class="flower__leafs flower__leafs--1">
